src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Team_Buckets_for_headcount__c</fullName>
        <formula>CASE(Team__c,
&quot;Beast Coast&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;SEC&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Kitchen&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Green Flash&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Peak Performers&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Closers Club&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Green Monsters&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Gravy Train&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;East Corporate&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;Central Corporate&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;West Corporate&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;Spartans&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Foundation&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Pack&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Marketing Inbound&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Wheelers and Dealers&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Intimidators&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;The Ringers&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;VManifest Destiny&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;Spartans Commercial&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Spartans Corporate&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;Spartans Inbound&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Spartans SMB&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Foundation Commercial&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Foundation Corporate&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;The Foundation Inbound&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Foundation SMB&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Pack Commercial&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Pack Corporate&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;The Pack Inbound&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Pack SMB&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Wild West&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;SalesTeam6&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;The Bulldogs&quot;,&quot;Velocity (US-Corporate)&quot;,
&quot;The Hounds&quot;,&quot;Velocity (US-Commercial)&quot;,
&quot;Bangers n Cash&quot;,&quot;Velocity (EMEA)&quot;,
&quot;E-Unit&quot;,&quot;Velocity (EMEA)&quot;,
&quot;The Pipelime&quot;,&quot;Velocity (EMEA)&quot;,
&quot;Enterprise&quot;,&quot;Enterprise (US)&quot;,
&quot;EMEA Enterprise&quot;,&quot;Enterprise (EMEA)&quot;,
&quot;Global Accounts International&quot;,&quot;Globals (EMEA)&quot;,
&quot;Global Accounts US&quot;,&quot;Globals (US)&quot;,
&quot;Xccelerators&quot;,&quot;Channel&quot;,
&quot;Candy Time&quot;,&quot;Other&quot;,
&quot;Business Development&quot;,&quot;Other&quot;,
&quot;Finance&quot;,&quot;Other&quot;,
&quot;Recruiting&quot;,&quot;Other&quot;,
NULL)</formula>
        <label>Team Buckets (for headcount)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Group_Buckets__c</fullName>
        <formula>IF(CONTAINS(TEXT(Team__c), &quot;EMEA Enterprise&quot;),&quot;EMEA Enterprise&quot;,
IF(ISPICKVAL(Team__c, &quot;APAC Enterprise&quot;),&quot;APAC&quot;,
IF(CONTAINS(TEXT(Team__c), &quot;Enterprise&quot;),
&quot;Enterprise&quot;,
CASE( Team__c,
&quot;US Commercial East 1&quot;,&quot;US Velocity&quot;,
&quot;US Commercial East 2&quot;,&quot;US Velocity&quot;,
&quot;US Commercial East 3&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West 1&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West 2&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West 3&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West&quot;,&quot;US Velocity&quot;,
&quot;Peak Performers&quot;,&quot;US Velocity&quot;,
&quot;The Green Flash&quot;,&quot;US Velocity&quot;,
&quot;The Titans&quot;,&quot;US Velocity&quot;,
&quot;Green Berets&quot;,&quot;US Velocity&quot;,
&quot;West Corporate&quot;,&quot;US Velocity - Corporate&quot;,
&quot;Oved Corporate&quot;,&quot;US Velocity - Corporate&quot;,
&quot;The Pack Commercial&quot;,&quot;US Velocity&quot;,
&quot;The Pack&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West SDR&quot;,&quot;US Velocity&quot;,
&quot;US Commercial East SDR&quot;,&quot;US Velocity&quot;,
&quot;Virtual Empire&quot;,&quot;US Velocity&quot;,
&quot;The Green Monsters&quot;,&quot;US Velocity&quot;,
&quot;Closers Club&quot;,&quot;US Velocity&quot;,
&quot;The Ringers&quot;,&quot;US Velocity&quot;,
&quot;The Wolves of Boylston&quot;,&quot;US Velocity&quot;,
&quot;East Corporate&quot;,&quot;US Velocity - Corporate&quot;,
&quot;Spartans Commercial&quot;,&quot;US Velocity&quot;,
&quot;Spartans&quot;,&quot;US Velocity&quot;,
&quot;SEC&quot;,&quot;US Velocity&quot;,
&quot;Beast Coast&quot;,&quot;US Velocity&quot;,
&quot;Green Street Hooligans&quot;,&quot;US Velocity&quot;,
&quot;Central Corporate&quot;,&quot;US Velocity - Corporate&quot;,
&quot;The Kitchen&quot;,&quot;US Velocity&quot;,
&quot;The Foundation&quot;,&quot;US Velocity&quot;,
&quot;The Foundation Commercial&quot;,&quot;US Velocity&quot;,
&quot;The Methodology Commercial&quot;,&quot;US Velocity&quot;,
&quot;The Bulldogs&quot;,&quot;US Velocity - Corporate&quot;,
&quot;The Wild West&quot;,&quot;US Velocity&quot;,
&quot;The Hounds&quot;,&quot;US Velocity&quot;,
&quot;SalesTeam6&quot;,&quot;US Velocity&quot;,
&quot;Shake n Bake&quot;,&quot;US Velocity&quot;,
&quot;Notti By Nature&quot;,&quot;US Velocity&quot;,
&quot;The Hunchbacks&quot;,&quot;US Velocity&quot;,
&quot;Ganas iOS&quot;,&quot;EMEA Velocity&quot;,
&quot;The Pipelime&quot;,&quot;EMEA Velocity&quot;,
&quot;Bangers n Cash&quot;,&quot;EMEA Velocity&quot;,
&quot;E-Unit&quot;,&quot;EMEA Velocity&quot;,
&quot;EMEA Inbound&quot;,&quot;EMEA Velocity&quot;,
&quot;EMEA Commercial France&quot;,&quot;EMEA Velocity&quot;,
&quot;EMEA Commercial UK&quot;,&quot;EMEA Velocity&quot;,
&quot;Global Accounts International&quot;,&quot;EMEA Enterprise&quot;,
&quot;Global Accounts US&quot;,&quot;Globals&quot;,
&quot;Wheelers and Dealers&quot;,&quot;US Velocity&quot;,
&quot;Xccelerators&quot;,&quot;Channel&quot;,
&quot;Candy Time&quot;,&quot;Customer Experience&quot;,
&quot;Los Conquistadores&quot;,&quot;LATAM&quot;,
&quot;LATAM&quot;,&quot;LATAM&quot;,
&quot;Federal&quot;,&quot;Federal&quot;,
&quot;N/A&quot;)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Group_Level_Buckets__c</fullName>
        <formula>CASE(Order_for_TVs_AE_Heatmap__c,
1,&quot;US Corporate&quot;,
2,&quot;US Commercial&quot;,
3,&quot;EMEA Velocity&quot;,
4,&quot;Enterprise&quot;,
5,&quot;EMEA Enterprise&quot;,
6,&quot;Alliances&quot;,&quot;Deal Desk&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team (Group Level Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                    <label>a_Executive</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <label>a_Finance</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <label>a_Marketing</label>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                    <label>a_Recruiting</label>
                </value>
                <value>
                    <fullName>Sales Enablement</fullName>
                    <label>a_Sales Enablement</label>
                </value>
                <value>
                    <fullName>APAC Enterprise</fullName>
                </value>
                <value>
                    <fullName>EMEA Commercial France</fullName>
                </value>
                <value>
                    <fullName>EMEA Commercial UK</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise France</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise Germany</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise SDR</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise UK</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise Unallocated</fullName>
                </value>
                <value>
                    <fullName>Global Accounts International</fullName>
                </value>
                <value>
                    <fullName>Global Accounts US</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>No Team Assigned</fullName>
                    <default>true</default>
                    <label>No Team Assigned</label>
                </value>
                <value>
                    <fullName>Candy Time</fullName>
                    <label>p_Candy Time</label>
                </value>
                <value>
                    <fullName>Technical Account Managers</fullName>
                    <label>p_Technical Account Managers</label>
                </value>
                <value>
                    <fullName>The Methodology Commercial</fullName>
                </value>
                <value>
                    <fullName>The Pack Commercial</fullName>
                </value>
                <value>
                    <fullName>US Commercial</fullName>
                </value>
                <value>
                    <fullName>US Commercial East</fullName>
                </value>
                <value>
                    <fullName>US Commercial East 1</fullName>
                </value>
                <value>
                    <fullName>US Commercial East 2</fullName>
                </value>
                <value>
                    <fullName>US Commercial East 3</fullName>
                </value>
                <value>
                    <fullName>US Commercial East SDR</fullName>
                </value>
                <value>
                    <fullName>US Commercial Unallocated</fullName>
                </value>
                <value>
                    <fullName>US Commercial West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_for_Headcount__c</fullName>
        <formula>IF(CONTAINS(TEXT(Team__c),&quot;Minutemen&quot;),IF(CONTAINS(UserRole.Name,&quot;Global&quot;),&quot;Minutemen (Globals)&quot;,&quot;Minutemen (Velocity)&quot;),TEXT(Team__c))</formula>
        <label>Team (for Headcount)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_strategy__c</fullName>
        <label>Team strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure_at_Company_Days__c</fullName>
        <formula>IF(ISBLANK( Termination_Date__c ),
TODAY()-Start_Date__c,
Termination_Date__c -Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure at Company (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenure_days__c</fullName>
        <formula>if(ISBLANK(Termination_Date__c),
  if(ISBLANK(Transition_from_BDR_AE_Bus_Driver_Date__c),
    IF(ISBLANK(Promotion_to_Recruiter_Date__c),
      IF(ISBLANK(Promotion_to_Sourcer_Date__c),
        IF(ISBLANK(Promotion_to_AE_Date__c),
          IF(ISBLANK(Sales_Start_Date__c),MAX(TODAY()-Start_Date__c,0),MAX(TODAY()-Sales_Start_Date__c,0)),
        MAX(TODAY()-Promotion_to_AE_Date__c,0)),
      MAX(TODAY()-Promotion_to_Sourcer_Date__c)),
    MAX(TODAY()-Promotion_to_Recruiter_Date__c,0)),
  MAX(TODAY()-Transition_from_BDR_AE_Bus_Driver_Date__c,0)),
MIN(BLANKVALUE(Termination_Date__c-Transition_from_BDR_AE_Bus_Driver_Date__c,  Termination_Date__c-Start_Date__c), BLANKVALUE(Termination_Date__c-Promotion_to_Recruiter_Date__c, Termination_Date__c-Start_Date__c), BLANKVALUE(Termination_Date__c-Promotion_to_Sourcer_Date__c, Termination_Date__c-Start_Date__c), BLANKVALUE(Termination_Date__c-Promotion_to_AE_Date__c,  Termination_Date__c-Start_Date__c), BLANKVALUE(Termination_Date__c-Sales_Start_Date__c,  Termination_Date__c-Start_Date__c)))</formula>
        <label>Tenure (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Status__c</fullName>
        <label>Termination Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Involuntary</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_from_BDR_AE_Bus_Driver_Date__c</fullName>
        <label>Transition from BDR/AE/Bus Driver Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_from_Role__c</fullName>
        <label>Transition from Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_from_Team__c</fullName>
        <label>Transition from Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Unique Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Id</formula>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role_Name__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>User Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMTurbo_Employee_Participation__c</fullName>
        <description>Trailing 30 Days Cumulative Points Uploaded from Jive</description>
        <label>VMTurbo Employee Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Velocity_Region__c</fullName>
        <formula>CASE( Team__c ,
&quot;Beast Coast&quot;,&quot;Central&quot;,
&quot;SEC&quot;,&quot;Central&quot;,
&quot;The Green Flash&quot;,&quot;West&quot;,
&quot;Peak Performers&quot;,&quot;West&quot;,
&quot;Closers Club&quot;,&quot;East&quot;,
&quot;The Green Monsters&quot;,&quot;East&quot;,
&quot;Bangers n Cash&quot;,&quot;EMEA&quot;,
&quot;Wheelers and Dealers&quot;,&quot;SMB&quot;,
&quot;Aussie Posse&quot;,&quot;APAC&quot;,
&quot;Intimidators&quot;,&quot;Central&quot;,
&quot;Gravy Train&quot;,&quot;East&quot;,
&quot;VManifest Destiny&quot;,&quot;West&quot;,
&quot;The Ringers&quot;,&quot;East&quot;,
&quot;Virtual Empire&quot;,&quot;East&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Velocity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketing_manager__c</fullName>
        <label>Marketing Manager</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__AllowMapAnythingExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow MapAnything Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__EditMapAnythingOrgWirdeQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit MapAnything Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MABetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapAnything Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLatitude__c</fullName>
        <label>MapAnything Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLongitude__c</fullName>
        <label>MapAnything Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultType__c</fullName>
        <label>MADefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultZoomLevel__c</fullName>
        <label>MapAnything Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxExportSize__c</fullName>
        <label>MapAnything Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxQuerySize__c</fullName>
        <label>MapAnything Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAVersion__c</fullName>
        <label>MapAnything Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__MapAnythingSettings__c</fullName>
        <label>Map Anything Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>vp_approvers__c</fullName>
        <label>VP Approvers</label>
        <relationshipName>Users1</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>BDRs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Promotion_to_Key_BDR_Date__c</columns>
        <columns>Demotion_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Team__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Business Development Rep,BDR</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BDRs</label>
    </listViews>
    <listViews>
        <fullName>Channel_People</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Team__c</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Role_Name__c</field>
            <operation>contains</operation>
            <value>Channel,Partner</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Channel People</label>
    </listViews>
    <listViews>
        <fullName>Level_1_Rulebreakers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_Rulebreaker_Level_1__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Level 1 Rulebreakers</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDRs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Promotion_to_Key_BDR_Date__c</columns>
        <columns>Promotion_to_SDR_Date__c</columns>
        <columns>Demotion_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Team__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Sales Development Rep,SDR</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SDRs</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Inactive_users_must_have_Inactive_role</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsActive=FALSE,
NOT(CONTAINS(Profile.Name,&quot;Partner&quot;)),
NOT(CONTAINS(UserRole.Name,&quot;Inactive&quot;)))</errorConditionFormula>
        <errorDisplayField>UserRoleId</errorDisplayField>
        <errorMessage>Inactive people must have belong to one of the &quot;Inactive&quot; roles</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_fill_in_termination_date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(IsActive),IsActive=FALSE,ISBLANK(Termination_Date__c))</errorConditionFormula>
        <errorDisplayField>Termination_Date__c</errorDisplayField>
        <errorMessage>Please enter the termination date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Aligned_to_Team_for_velocity_BDR</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),
NOT(CONTAINS(UserRole.Name,&quot;Inactive&quot;)),
NOT(CONTAINS(UserRole.Name,&quot;Enterprise&quot;)),
NOT(CONTAINS(UserRole.Name,&quot;Global&quot;)),
NOT(CONTAINS(UserRole.Name,&quot;Leads&quot;)),
NOT(CONTAINS(UserRole.Name,&quot;Inbound&quot;)),
TEXT(Aligned_to_Team_Region__c)=&quot;&quot;,
TODAY()-Start_Date__c&gt;45)</errorConditionFormula>
        <errorDisplayField>Aligned_to_Team_Region__c</errorDisplayField>
        <errorMessage>This field is required for all active velocity BDRs.  Please select the SALES team that the BDR is aligned to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Promotion_to_AE_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(User_Role_Name__c),
CONTAINS(UserRole.Name,&quot;Account Executive&quot;),
NOT(ISNEW()),
ISBLANK(Promotion_to_AE_Date__c))</errorConditionFormula>
        <errorDisplayField>Promotion_to_AE_Date__c</errorDisplayField>
        <errorMessage>Please specify the date this rep was promoted to AE (if the rep was hired as an AE, please enter his/her start date)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_phone_number_for_sales_reps</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Phone),
OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),
CONTAINS(UserRole.Name,&quot;Account Executive&quot;),
CONTAINS(UserRole.Name,&quot;Enterprise Rep&quot;),
CONTAINS(UserRole.Name,&quot;Bus Driver&quot;)),
NOT(CONTAINS(UserRole.Name,&quot;Inactive&quot;)))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please provide a phone number (this gets pulled into Marketo emails, so make sure it&apos;s right)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_termination_status</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Termination_Date__c),
NOT(ISBLANK(Termination_Date__c)),
TEXT(Termination_Status__c)=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Termination_Status__c</errorDisplayField>
        <errorMessage>Please specify a termination status</errorMessage>
    </validationRules>
</CustomObject>